--- a/style.css
+++ b/style.css
@@ -3,3 +3,49 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+#featured-property figure {
+  text-align: center;
+}
+
+#featured-property img {
+  display: block;
+  margin: 0 auto;
+}
+
+nav {
+  text-align: center;
+}
+
+nav a {
+  padding: 10px;
+  background-color: grey;
+  text-decoration: none;
+  margin: 5px;
+}
+
+figcaption {
+  font-size: 12px;
+  text-align: center;
+}
+
+#featured-property p {
+  text-align: center;
+  width: 800px;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+#details div {
+  float: left;
+  width: 25%;
+  text-align: center;
+}
+
+.details-item {
+  background-color: red;
+}
